--- a/take-out/index.html
+++ b/take-out/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>take-out</title>
+    <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
   </head>
   <body>
     <div id="app"></div>
