--- a/take-out/index.html
+++ b/take-out/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>take-out</title>
-    <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>take-out</title>
+  <link rel="stylesheet" type="text/css" href="./static/css/reset.css">
+  <meta name="viewport"
+        content="width=device-width,height=device-height,initial-scale=1,maximun-scale=1,minimum-scale=1,user-scalable=no">
+</head>
+<body>
+<div id="app">
+  <App>
+</div>
+<!-- built files will be auto injected -->
+</body>
 </html>
